Add metadata tests
Signed-off-by: Mikayla Thompson <thomika@amazon.com>